--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bluegg-tabs",
   "version": "0.0.1",
   "description": "Simple Tabs built with accessibility in mind. Forked from http://codepen.io/stowball/pen/xVWwWe/",
-  "main": "./distribution/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist",
     "prepublish": "npm run build"
