--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bluegg-tabs",
   "version": "0.0.1",
   "description": "Simple Tabs built with accessibility in mind. Forked from http://codepen.io/stowball/pen/xVWwWe/",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --out-dir dist",
-    "prepublish": "npm run build"
+    "build": "babel -d dist src/",
+    "prepublish": "./node_modules/.bin/babel -d dist src/"
   },
   "keywords": [
     "tabs"
@@ -13,7 +13,6 @@
   "author": "@bluegg",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-cli": "^6.10.1"
   }
 }
