--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bluegg-tabs",
   "version": "0.0.1",
   "description": "Simple Tabs built with accessibility in mind. Forked from http://codepen.io/stowball/pen/xVWwWe/",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "build": "babel -d dist src/",
-    "prepublish": "./node_modules/.bin/babel -d dist src/"
+    "build": "node_modules/.bin/babel --plugins add-module-exports src/index.js > dist/index.js",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "tabs"
@@ -13,6 +13,8 @@
   "author": "@bluegg",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.10.1"
+    "babel-cli": "^6.10.1",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
