--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bluegg-tabs",
   "version": "0.0.2",
   "description": "Simple Tabs built with accessibility in mind. Forked from http://codepen.io/stowball/pen/xVWwWe/",
-	"repository": "bluegg/bluegg-tabs",
+  "repository": "bluegg/bluegg-tabs",
   "main": "./dist/index.js",
   "scripts": {
     "build": "node_modules/.bin/babel --plugins add-module-exports src/index.js > dist/index.js",
@@ -17,5 +17,6 @@
     "babel-cli": "^6.10.1",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.9.0"
-  }
+  },
+  "dependencies": {}
 }
